--- a/statamic-project/content/collections/pages.yaml
+++ b/statamic-project/content/collections/pages.yaml
@@ -1,5 +1,8 @@
 title: Pages
+template: default
+layout: layout
+revisions: false
+route: 'pages/{slug}'
+sort_dir: asc
 structure:
   root: true
-route: '{parent_uri}/{slug}'
-propagate: true
