--- a/statamic-project/resources/blueprints/user.yaml
+++ b/statamic-project/resources/blueprints/user.yaml
@@ -1,29 +1,65 @@
 title: User
-fields:
-  -
-    handle: name
-    field:
-      type: text
-      display: Name
-  -
-    handle: email
-    field:
-      type: text
-      input: email
-      display: Email Address
-  -
-    handle: roles
-    field:
-      type: user_roles
-      width: 50
-  -
-    handle: groups
-    field:
-      type: user_groups
-      width: 50
-  -
-    handle: avatar
-    field:
-      type: assets
-      max_files: 1
-      container: assets
+sections:
+  main:
+    display: Main
+    fields:
+      -
+        handle: email
+        field:
+          type: text
+          input: email
+          display: 'Email Address'
+      -
+        handle: first_name
+        field:
+          input_type: text
+          antlers: false
+          display: 'First Name'
+          type: text
+          icon: text
+          width: 50
+          listable: hidden
+          instructions_position: above
+          visibility: visible
+      -
+        handle: last_name
+        field:
+          type: text
+          display: 'Last Name'
+          width: 50
+          instructions_position: above
+          listable: hidden
+          visibility: visible
+          input_type: text
+          antlers: false
+      -
+        handle: institution
+        field:
+          input_type: text
+          antlers: false
+          display: Institution
+          type: text
+          icon: text
+          listable: hidden
+          instructions_position: above
+          visibility: visible
+      -
+        handle: roles
+        field:
+          type: user_roles
+          width: 50
+          display: 'User Roles'
+          instructions_position: above
+          listable: hidden
+          visibility: visible
+          mode: default
+      -
+        handle: groups
+        field:
+          type: user_groups
+          width: 50
+          display: 'User Groups'
+          instructions_position: above
+          listable: hidden
+          visibility: visible
+          mode: default
