--- a/statamic-project/resources/users/roles.yaml
+++ b/statamic-project/resources/users/roles.yaml
@@ -24,6 +24,21 @@ editor:
     - 'edit other authors event_groups entries'
     - 'publish other authors event_groups entries'
     - 'delete other authors event_groups entries'
+    - 'edit conference globals'
+    - 'edit design globals'
+    - 'configure taxonomies'
+    - 'view languages terms'
+    - 'edit languages terms'
+    - 'create languages terms'
+    - 'view event_types terms'
+    - 'edit event_types terms'
+    - 'create event_types terms'
+    - 'view assets assets'
+    - 'upload assets assets'
+    - 'edit assets assets'
+    - 'view customize assets'
+    - 'upload customize assets'
+    - 'edit customize assets'
     - 'view users'
     - 'edit users'
 participant:
