event days and adjustments

--- a/statamic-project/resources/blueprints/collections/event_groups/event_group.yaml
+++ b/statamic-project/resources/blueprints/collections/event_groups/event_group.yaml
@@ -1,4 +1,4 @@
-title: 'Event Group'
+title: Event
 sections:
   main:
     display: Main
@@ -74,23 +74,6 @@ sections:
           visibility: visible
           instructions: 'Direct Link to the meeting/conference like *Zoom*, *Teams*, *Bluebutton* and so on. Using hyperlink is recommended **Displayed only to registered users**.'
       -
-        handle: date_input
-        field:
-          mode: single
-          time_enabled: false
-          time_seconds_enabled: false
-          full_width: false
-          inline: false
-          columns: 1
-          rows: 1
-          display: Date
-          type: date
-          icon: date
-          listable: hidden
-          instructions_position: above
-          visibility: visible
-          instructions: 'Date of this section. Easy.'
-      -
         handle: starting_time
         field:
           seconds_enabled: false
@@ -159,7 +142,7 @@ sections:
           instructions_position: above
           visibility: visible
       -
-        handle: entries_field
+        handle: event_fields
         field:
           mode: default
           create: true
