--- a/statamic-project/resources/blueprints/collections/event_groups/event_day.yaml
+++ b/statamic-project/resources/blueprints/collections/event_groups/event_day.yaml
@@ -11,7 +11,7 @@ sections:
           validate:
             - required
       -
-        handle: date
+        handle: date_day
         field:
           mode: single
           time_enabled: false
